[project]
name = "simalq"
version = "0.1.0"
description = "SimAlq - A roguelike game"
authors = [
    {name = "Aidan Pace", email = "apace@defrecord.com"}
]
readme = "README.rst"
requires-python = ">=3.11,<3.14"
dependencies = [
    "hy (>=1.0.0,<2.0.0)",
    "hyrule (>=1.0.0)",
    "toolz (>=1.0.0)",
    "construct (>=2.10.70)",
    "blessed (>=1.20.0)",
    "platformdirs (>=4.3.6)",
    "metadict (>=0.1.3)",
    "pytest"
]

packages = [
    {include = "simalq"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
